--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,9 @@
          </div>
          <hr>
          <div class="row-fluid">
+            <div class="span12 marketing">
+                <h5>We are always looking for highly-motivated visiting scholars and PhD students, especially candidates interested in the area of Bioinformatics.</h5>
+            </div>
             <div class="span12 content">
                <div class="row-fluid">
                   <div class="span8">
