--- a/people.html
+++ b/people.html
@@ -67,7 +67,7 @@
                         <p><b>Fax: </b>(404) 727-1370 </p>
                         <p><b>Email: </b><a href="mailto:zhaohui.qin@emory.edu">zhaohui.qin@emory.edu</a></p>
                         <p><b>Address: </b>1518 Clifton Road Ne, GCR 338, Atlanta, Georgia 30322</p>
-                        <p><b><a href="https://apps.sph.emory.edu/RSPHPeople/files/resumes/0">CV</a>, <a href="https://scholar.google.com/citations?hl=en&user=9F-Jk74AAAAJ">Google Scholar</a>, <a href="https://www.sph.emory.edu/faculty/profile/index.php?FID=8697">Rollins Faculty Page</a></b></p>
+                        <p><b><a href="steveqinCV.08302019.pdf">CV</a>, <a href="https://scholar.google.com/citations?hl=en&user=9F-Jk74AAAAJ">Google Scholar</a>, <a href="https://www.sph.emory.edu/faculty/profile/index.php?FID=8697">Rollins Faculty Page</a></b></p>
                      </div>
                   </div>
                </section>
