--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
             </div>
          </div>
          <hr>
-         <script src="https://bibbase.org/show?bib=https://dblp.org/pid/52/1149.bib&jsonp=1"></script>
+         <script src="https://bibbase.org/show?bib=https%3A%2F%2Fsteve-qin-bioinfo-lab.github.io%2Fpubs.bib&jsonp=1"></script>
       </div>
       <footer id="footer">
       </footer>
