--- a/software.html
+++ b/software.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>News</title>
+      <title>Software</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Zhaohui Qin's Lab, News, Emory University">
       <meta name="author" content="">
@@ -34,6 +34,7 @@
             </div>
          </div>
          <hr>
+         <!--
          <div id="media">
             <div class="row-fluid post_row">
                <div class="span6 post">
@@ -75,83 +76,33 @@
                   </div>
                </div>
             </div>
-            <div class="row-fluid post_row">
-               <div class="span6 post">
-                  <div class="text">
-                     <h5><a href="https://mitei.mit.edu">Vitae Congue eu Consequat : Arcu cursus euismod</a></h5>
-                     <span class="date">December 13, 2017</span>
-                  </div>
-                  <div class="img">
-                     <a href="https://mitei.mit.edu">
-                     <img src="images/harnessingsolar-3.jpg" alt="Vitae Congue eu Consequat : Arcu cursus euismod">
-                     </a>
-                  </div>
-                  <div class="text">
-                     <p> Eu augue ut lectus arcu bibendum at. Vel elit scelerisque mauris pellentesque pulvinar pellentesque. Hac habitasse platea dictumst quisque sagittis purus. Elementum sagittis vitae et leo. Malesuada proin libero nunc consequat.</p>
-                     <br/>
-                     <br/>
-                  </div>
-                  <div class="author_box">
-                     <h6>Karen R. James</h6>
-                  </div>
-               </div>
-               <div class="span6 post">
-                  <div class="text">
-                     <h5><a href="https://mitei.mit.edu">Scelerisque Mauris: Ut sem nulla pharetra diam sit amet nisl suscipit.</a></h5>
-                     <span class="date">March 4, 2017</span>
-                  </div>
-                  <div class="img">
-                     <a href="https://mitei.mit.edu">
-                     <img src="images/smartplanet.png" alt="Scelerisque Mauris: Ut sem nulla pharetra diam sit amet nisl suscipit.">
-                     </a>
-                  </div>
-                  <div class="text">
-                     <p>Leo duis ut diam quam nulla porttitor massa id neque. Quam id leo in vitae turpis massa sed elementum. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Id donec ultrices tincidunt arcu non. Nec feugiat in fermentum posuere urna nec. Et leo duis ut diam. Tincidunt eget nullam non nisi est sit amet. </p>
-                  </div>
-                  <div class="author_box">
-                     <h6>Jacob Bern</h6>
-                  </div>
-               </div>
-            </div>
-            <div class="row-fluid post_row">
-               <div class="span6 post">
-                  <div class="text">
-                     <h5><a href="https://mitei.mit.edu">Vulputate Dignissim Suspendisse: Purus sit amet</a></h5>
-                     <br/>
-                     <span class="date">November 11, 2017</span>
-                  </div>
-                  <div class="img">
-                     <a href="https://mitei.mit.edu">
-                     <img src="images/parabolic.jpg" alt="Vulputate Dignissim Suspendisse: Purus sit amet">
-                     </a>
-                  </div>
-                  <div class="text">
-                     <p>Ultricies lacus sed turpis tincidunt id aliquet. Ultricies mi eget mauris pharetra et ultrices. Velit dignissim sodales ut eu sem. Senectus et netus et malesuada fames ac turpis egestas. Commodo quis imperdiet massa tincidunt nunc.</p>
-                     <br/>
-                  </div>
-                  <div class="author_box">
-                     <h6>Sarmin Kato</h6>
-                  </div>
-               </div>
-               <div class="span6 post">
-                  <div class="text">
-                     <h5><a href="https://mitei.mit.edu">Lorem Ipsum Dolor: Enim ut sem viverra aliquet?</a></h5>
-                     <br/>
-                     <span class="date">October 31, 2017</span>                     
-                  </div>
-                  <div class="img">
-                     <a href="https://mitei.mit.edu">
-                     <img src="images/solarenergypowerstation.jpg" alt="Lorem Ipsum Dolor: Enim ut sem viverra aliquet?">
-                     </a>
-                  </div>
-                  <div class="text">
-                     <p> Nisl condimentum id venenatis a condimentum vitae. Leo vel orci porta non pulvinar. Phasellus vestibulum lorem sed risus ultricies tristique nulla. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla. </p>
-                     <br/>
-                  </div>
-                  <div class="author_box">
-                     <h6>Joe Orwell</h6>
-                  </div>
-               </div>
+         </div>
+         -->
+         <div class="row-fluid">
+            <div class="span12">
+            <h3>Software Developed</h3>
+            <ul>
+                <li><b>EM-DeCODER</b> (haplotype phasing using EM algorithm).</li>
+                <li><b>HAPLOTYPER</b> (haplotype phasing using Partition-Ligation and Gibbs Sampler).</li>
+                <li><b>PL-EM</b> (haplotype phasing using Partition-Ligation and EM algorithm).</li>
+                <li><b>BMC</b> (putative binding motif clustering using Gibbs Sampler).</li>
+                <li><b>FESTA</b> (tagSNP selection based on pairwise LD) With Shyam Gopalakrishnan.</li>
+                <li><b>tripleM</b> (PL-EM for phasing trios).</li>
+                <li><b>CRC</b> (model-based clustering algorithm for gene expression microarray data).</li>
+                <li><b>OperonHMM</b> (a hidden Markov model for predicting operon structure using only sequence data). Codeveloped with Dr. Nick Bergman.</li>
+                <li><b>CRCView</b> (point-and-click web server for clustering, visualizing and interpreting microarray gene expression data). Co-developed with Zuoshuang Xiang and Yongqun He.</li>
+                <li><b>BEST</b> (query large scale microarray compendium datasets using model-based Bayesian approach with variable selection). Developed by Ming Hu.</li>
+                <li><b>HPeak</b> (A hidden Markov model-based algorithm for calling ChIP-enriched peaks using ChIP-seq data).</li>
+                <li><b>ChIP-meta</b> (hierarchical hidden Markov model-based algorithm for inferring ChIP-enriched regions using both ChIP-seq and ChIP-chip data). Developed by Hyung Won Choi.</li>
+                <li><b>HMS</b> (a hybrid Monte Carlo-based de nono motif discovery tool designed specifically for analyzing ChIP-Seq data). Developed by Ming Hu.</li>
+                <li><b>POME</b> (Poisson mixed-effects model for quantification expression in RNA-Seq data). Developed by Ming Hu in collaboration with Michael Yu Zhu.</li>
+                <li><b>GPUmotif</b> (de novo motif finding and motif scan using GPU). Developed by Pooya Zandevakili.</li>
+                <li><b>Methylphet</b> (predict TF binding in vivo from base-level methylome profiling data). Developed by Tianlei Xu, Ben Li and Meng Zhao.</li>
+                <li><b>RefEditor</b> (customize reference genome using individual’s known mutation profile). Developed by Shuai Yuan.</li>
+                <li><b>IPBT</b> (detect differentially expressed genes with informative prior obtained from historical data). Developed by Ben Li.</li>
+                <li><b>traseR</b> (to perform trait associated SNP enrichment analysis). Developed by Li Chen.</li>
+                <li><b>DIVAN</b> (provide disease-specific annotation on nonocoding variants using epigenomcis profiles). Developed by Li Chen.</li>
+            </ul>
             </div>
          </div>
       </div>
