--- a/index.html
+++ b/index.html
@@ -78,110 +78,20 @@
                   <br/>
                </div>
                <div class="row-fluid">
-                  <hr>
-                  <h2 class="centered">Recent News</h2>
-                  <hr>
-               </div>
-               <div class="span4 feature-item">
-                  <h5> <span class="date"> May 1, 2019 </span> </h5>
-                  <h4 class="feature-heading">
-                     <a href="https://unsplash.com/photos/CPmrdbbpnXg">
-                     Students pose for conference lacus luctus accumsan tortor posuere
-                     </a>
-                     <br/>
-                  </h4>
-                  <hr>
-                  <div class="centered">
-                     <a href="https://unsplash.com/photos/CPmrdbbpnXg">
-                     <img src="thumbs/jerry-zhang-1281608-unsplash.jpg" alt=""></a>
-                  </div>
-                  <hr>
-                  <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                     dolore magna aliqua. 
-                     Find the proceedings <a href="https://unsplash.com/photos/CPmrdbbpnXg">here</a>.
-                  </p>
-                  <br/>
-                  <br/>
-               </div>
-               <div class="span4 feature-item">
-                  <h5> <span class="date">April 20, 2019</span> </h5>
-                  <h4 class="feature-heading">
-                     <a href="https://unsplash.com/photos/rTZW4f02zY8">
-                     Tincidunt tortor aliquam nulla facilisi. Nunc scelerisque viverra mauris in
-                     </a>
-                  </h4>
-                  <hr>
-                  <div class="centered">
-                     <a href="https://unsplash.com/photos/rTZW4f02zY8">
-                     <img src="thumbs/nasa-89125-unsplash.jpg" alt="">
-                     </a>
-                  </div>
-                  <hr>
-                  <p>
-                     Read the paper 
-                     <a href="https://unsplash.com/photos/rTZW4f02zY8">here</a>.
-                     Consequat semper viverra nam libero justo laoreet. Commodo odio aenean sed adipiscing diam donec. 
-                  </p>
-                  <br/>
+                  <p><b>Links: <a href="https://scholar.google.com/citations?hl=en&user=9F-Jk74AAAAJ">Google Scholar</a>, <a href="http://orcid.org/0000-0002-1583-146X">ORCID</a>, <a href="https://www.ncbi.nlm.nih.gov/myncbi/zhaohui.qin.1/bibliography/public/">NCBI</a>, <a href="https://publons.com/researcher/2960270/zhaohui-qin/">Publons</a>, <a href="https://www.growkudos.com/profile/zhaohui_qin">Kudos</a>, <a href="emorybioinfo.slack.com">Internal Slack Group</a></b></p>
                </div>
                <div class="row-fluid">
-                  <div class="span4 feature-item">
-                     <h5> <span class="date">October 2, 2018</span> </h5>
-                     <h4 class="feature-heading">
-                        <a href="http://mechanical.illinois.edu/news/miljkovic-pleased-join-%E2%80%98powerhouse%E2%80%99-illinois">
-                        Pretium lectus quam id leo in vitae turpis massa
-                        <br/>
-                        <br/>
-                        </a>
-                     </h4>
-                     <hr>
-                     <div class="centered">
-                        <a href="https://unsplash.com/photos/WNk-f-TnZDw">
-                        <img src="thumbs/rodolfo-cuadros-762364-unsplash.jpg" alt=""></a>
-                     </div>
-                     <hr>
-                     <p> 
-                        Tristique senectus et netus et malesuada. Sed viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. 
-                        Read it <a href="https://unsplash.com/photos/WNk-f-TnZDw">here</a>.
-                     </p>
-                     <br/>					
+                  <h3>News</h3>
+                  <div class="span7">
+                     <ul>
+                     <li>[12/31/2019] The lab website is launched!</li>
+                     </ul>
+                  </div>
+                  <div class="span4">
+                     <a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/SteveQinEmory?ref_src=twsrc%5Etfw">Tweets by SteveQinEmory</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                   </div>
                </div>
-               <hr>
             </div>
-            <div class="row-fluid">
-               <div class="span4 feature-item">
-                  <h4 class="feature-heading"><a href="https://unsplash.com/photos/QvbLjB9pHLM">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet ultrices velit habitasse platea</a></h4>
-                  <hr>
-                  <div class="centered">
-                     <a href="https://unsplash.com/photos/QvbLjB9pHLM"><img src="thumbs/ivanov-crop.JPG" alt=""></a>
-                  </div>
-                  <hr>
-                  <p>Aecenas consectetur vestibulum orci ut vulputate. Aenean cursus finibus pulvinar <a href="https://unsplash.com/photos/QvbLjB9pHLM">here</a>. </p>
-                  <br/>
-               </div>
-               <div class="span4 feature-item">
-                  <h4 class="feature-heading"><a href="https://unsplash.com/photos/lQGJCMY5qcM">Maecenas placerat ullamcorper eros a vehicula. Duis mollis tortor ut elit elementum</a></h4>
-                  <hr>
-                  <div class="centered">
-                     <a href="https://unsplash.com/photos/lQGJCMY5qcM"><img src="thumbs/beaker-crop.JPG" alt=""></a>
-                  </div>
-                  <hr>
-                  <p>Read the paper <a href="https://unsplash.com/photos/lQGJCMY5qcM">here</a> </p>
-               </div>
-               <div class="span4 feature-item">
-                  <h4 class="feature-heading"><a href="https://unsplash.com/photos/QCbZ4ASLhM8">Fusce tempor placerat felis, et placerat sapien lacinia sit amet<br/><br/><br/></a></h4>
-                  <hr>
-                  <div class="centered">
-                     <a href="https://unsplash.com/photos/QCbZ4ASLhM8"><img src="thumbs/sato-chart.JPG" alt=""></a>
-                  </div>
-                  <hr>
-                  <p> Aenean posuere, nulla ut placerat fringilla, dolor dolor pellentesque metus. Read the paper <a href="https://unsplash.com/photos/QCbZ4ASLhM8">here</a>.</p>
-                  <br/>
-                  <br/>
-                  <br/>
-               </div>
             </div>
          </div>
       </div>
