--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
 	  <a href="mailto:zhaohui.qin@emory.edu">Email</a>
        </div>
        <div class="span2">
-	  <a href="http://www.emory.edu/home/index.html"><img src = "EUShield_vt_rv.png" alt="research-lab-logo"/></a>
+	  <a href="http://www.emory.edu/home/index.html"><img src = "thumbs/EUShield_vt_rv.png" alt="research-lab-logo"/></a>
        </div>
        <div class="span5">
 	  <h3>Address</h3>
