--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="row-fluid marketing">
                <div class="span12">
                   <p style="font-size:18px; line-height=28px">
-                  Dr. Zhaohui Qin has extensive experience in statistical modeling and computing with applications to statistical genetics and genomics.
+                  Dr. Zhaohui "Steve" Qin has extensive experience in statistical modeling and computing with applications to statistical genetics and genomics.
                   His recent research is focused on developing Bayesian model-based methods to analyze data generated from applications of next-generation sequencing technologies such as ChIP-seq, RNA-seq, Hi-C, WGBS, resequencing, and on developing software so that the methods can be easily adopted by the research community.
                   He is also actively collaborating with biomedical scientists and clinicians on projects that utilize next-generation sequencing technologies to better understand genomics and epigenomics.
                   </p>
