edit Wenjing's content; add Alumni in people; change google scholar href to sort by date

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <br/>
                </div>
                <div class="row-fluid">
-                   <p><b>Links: <a href="https://scholar.google.com/citations?hl=en&user=9F-Jk74AAAAJ">Google Scholar</a>, <a href="http://orcid.org/0000-0002-1583-146X">ORCID</a>, <a href="https://www.ncbi.nlm.nih.gov/myncbi/zhaohui.qin.1/bibliography/public/">NCBI</a>, <a href="https://publons.com/researcher/2960270/zhaohui-qin/">Publons</a>, <a href="https://www.growkudos.com/profile/zhaohui_qin">Kudos</a>, <a href="https://emorybioinfo.slack.com">Internal Slack Group</a>, <a href="https://github.com/Steve-Qin-Bioinfo-Lab">Github</a></b></p>
+                   <p><b>Links: <a href="https://scholar.google.com/citations?hl=en&user=9F-Jk74AAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>, <a href="http://orcid.org/0000-0002-1583-146X">ORCID</a>, <a href="https://www.ncbi.nlm.nih.gov/myncbi/zhaohui.qin.1/bibliography/public/">NCBI</a>, <a href="https://publons.com/researcher/2960270/zhaohui-qin/">Publons</a>, <a href="https://www.growkudos.com/profile/zhaohui_qin">Kudos</a>, <a href="https://emorybioinfo.slack.com">Internal Slack Group</a>, <a href="https://github.com/Steve-Qin-Bioinfo-Lab">Github</a></b></p>
                </div>
                <div class="row-fluid">
                   <h3>News</h3>
