--- a/people.html
+++ b/people.html
@@ -118,7 +118,7 @@
                      </div>
                      <div class="span9">
                         <h4><a href="http://www.mathcs.emory.edu/~wma36">Wenjing Ma</a></h4>
-                        <p>Wenjing is a first-year Ph.D. student in the CSI Program at Emory University. She is working on single-cell genomics data analysis projects.</p>
+                        <p>Wenjing is a first-year Ph.D. student in the CSI Program at Emory University. She is doing single-cell sequencing data analysis. Her current project leverages single-cell RNA-seq dataset as a reference to detect transcriptomic activity of a certain cell type or sub-cell type in bulk RNA-seq data without deconvolution. </p>
                         <p><b>Email: </b><a href="mailto:wenjing.ma@emory.edu">wenjing.ma@emory.edu</a></p>
                         <p><b>Address: </b>201 Dowman Drive, Atlanta, Georgia 30322</p>
                      </div>
@@ -225,6 +225,12 @@
                   </div>
                   <hr>
                 </section>
+               <section id="alumni">
+                <div class="page-header">
+                     <h3>Alumni</h3>
+                  </div>
+               </section>
+
              </div>
           </div>
        </div>
