--- a/gallery.html
+++ b/gallery.html
@@ -48,20 +48,20 @@
          <div class="row-fluid">
             <div class="span3 bs-docs-sidebar" id="navparent">
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
-                  <li><a href="#imagegallery1"> Image Gallery 1 </a></li>
-                  <li><a href="#imagegallery2"> Image Gallery 2 </a></li>
+                  <li><a href="#imagegallery1"> Lab pictures </a></li>
+                  <li><a href="#imagegallery2"> Volunteers </a></li>
                </ul>
             </div>
             <div class="span8 offset1">
                <section id="imagegallery1">
                   <div class="page-header">
-                     <h3>Image Gallery 1</h3>
+                     <h3>Lab pictures</h3>
                   </div>
                   <div class="row-fluid">
                      <ul class="thumbnails da-thumbs">
                         <li class="span4">
                            <a title="Xiaobo Sun Graduation"  href="images/Xiaobo_Sun_Graduation.JPG" class="thumbnail" >
-                           <img alt="" src="images/Xiaobo_Sun_Graduation.JPG" style="width: 187px; height: 125px;">            
+                           <img alt="" src="images/Xiaobo_Sun_Graduation.JPG" style="width: 125px; height: 187px;">            
                            </a>
                            <p class="caption"> Xiaobo Sun Graduation </p>
                         </li>
@@ -71,12 +71,18 @@
                            </a>
                            <p class="caption"> Group Photo 2018 </p>
                         </li>
+                        <li class="span4">
+                           <a title="group_photo_2019.jpg" href="images/group_photo_2019.jpg" class="thumbnail" >
+                           <img alt="" src="images/group_photo_2019.jpg" style="width: 187px; height: 125px;">
+                           </a>
+                           <p class="caption"> Group Photo 2019 </p>
+                        </li>
                      </ul>
                   </div>
                </section>
                <section id="imagegallery2">
                   <div class="page-header">
-                     <h3>Image Gallery 2</h3>
+                     <h3>Volunteers</h3>
                   </div>
                   <div class="row-fluid">
                      <ul class="thumbnails da-thumbs">
