--- a/people.html
+++ b/people.html
@@ -107,7 +107,7 @@
                      </div>
                      <div class="span9">
                         <h4><a href="https://www.linkedin.com/in/shiyu-wang-647a7b91/">Shiyu Wang</a></h4>
-                        <p>Shiyu is a first-year Ph.D. student in the BIOS and Bioinformatics Program at Emory University.</p>
+                        <p>Shiyu is a first-year Ph.D. student in the Biostatistics and Bioinformatics Department at Emory University. He is currently working on a project regarding pathway analysis based on genomic data.</p>
                         <p><b>Email: </b><a href="mailto:shiyu.wang@emory.edu">shiyu.wang@emory.edu</a></p>
                         <p><b>Address: </b>BIOS</p>
                      </div>
