add alumni information

--- a/people.html
+++ b/people.html
@@ -41,7 +41,7 @@
                   <li><a href="#phd">PhD Students</a></li>
                   <li><a href="#rotationphd">Rotation PhD Students</a></li>
                   <li><a href="#master">Master Students</a></li>
-                  <li><a href="#master">Alumni</a></li>
+                  <li><a href="#alumni">Alumni</a></li>
                </ul>
             </div>
             <div class="span8 offset1">
@@ -228,8 +228,30 @@
                 </section>
                <section id="alumni">
                 <div class="page-header">
-                     <h3>Alumni</h3>
-                  </div>
+                    <h3>Alumni</h3>
+
+                    <h4>Postdoc</h4>
+                    <p>Meng Zhao</p>
+                    <p>Rendong Yang</p>
+                    <p>Li Li</p>
+                    <p>Rich Johnston</p>
+                    <p>Axel Poulet</p>
+
+                    <h4>PhD Students</h4>
+                    <p>Jihao Zhou</p>
+                    <p>Hyung Won Choi</p>
+                    <p>Ming Hu</p>
+                    <p>Shyam Gopalakrishnan</p>
+                    <p>Jincheng Shen</p>
+                    <p>Shuai Yuan</p>
+                    <p>Li Chen</p>
+                    <p>Ben Li</p>
+                    <p>Tianlei Xu</p>
+                    <p>Xiaobo Sun</p>
+
+                    <h4>Visiting Students</h4>
+                    <p>Guodong Yang</p>
+                </div>
                </section>
 
              </div>
