--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Zhaohui Qin's Lab - Home</title>
+      <title> 刘智Lab - Home</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Zhaohui Qin's Research Lab, Home, Emory University">
+      <meta name="description" content="刘智实验室, Home, HUST">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -71,7 +71,7 @@
             <div class="row-fluid marketing">
                <div class="span12">
                   <p style="font-size:18px; line-height=28px">
-                  Dr. Zhaohui "Steve" Qin has extensive experience in statistical modeling and computing with applications to statistical genetics and genomics.
+                  肠道微生物团队Dr. Zhaohui "Steve" Qin has extensive experience in statistical modeling and computing with applications to statistical genetics and genomics.
                   His recent research is focused on developing Bayesian model-based methods to analyze data generated from applications of next-generation sequencing technologies such as ChIP-seq, RNA-seq, Hi-C, WGBS, resequencing, and on developing software so that the methods can be easily adopted by the research community.
                   He is also actively collaborating with biomedical scientists and clinicians on projects that utilize next-generation sequencing technologies to better understand genomics and epigenomics.
                   </p>
@@ -84,7 +84,7 @@
                   <h3>News</h3>
                   <div class="span7">
                      <ul>
-                     <li>[12/31/2019] The lab website is launched!</li>
+                     <li>[12/31/2019] 实验室网站上线啦The lab website is launched!</li>
                      </ul>
                   </div>
                   <div class="span4">
