--- a/people.html
+++ b/people.html
@@ -113,6 +113,18 @@
                      </div>
                   </div>
                   <hr>
+		  <div class="row-fluid">
+                     <div class="span3">
+                        <img src="thumbs/Shiyu_Wang.jpg" alt="Shiyu Wang"/>
+                     </div>
+                     <div class="span9">
+                        <h4><a href="https://www.linkedin.com/in/shiyu-wang-647a7b91/">邓云</a></h4>
+                        <p>邓云同学Shiyu is a first-year Ph.D. student in the Biostatistics and Bioinformatics Department at Emory University. He is currently working on a project regarding pathway analysis based on genomic data.</p>
+                        <p><b>Email: </b><a href="mailto:shiyu.wang@emory.edu">1281312813@qq.com</a></p>
+                        <p><b>Address: </b>BIOS</p>
+                     </div>
+                  </div>
+                  <hr>
                   <div class="row-fluid">
                      <div class="span3">
                         <img src="thumbs/Wenjing.png" alt="Wenjing Ma"/>
