--- a/people.html
+++ b/people.html
@@ -115,7 +115,7 @@
                   <hr>
 		  <div class="row-fluid">
                      <div class="span3">
-                        <img src="thumbs/Shiyu_Wang.jpg" alt="Shiyu Wang"/>
+                        <img src="thumbs/dengyun.jpg" alt="邓云"/>
                      </div>
                      <div class="span9">
                         <h4><a href="https://www.linkedin.com/in/shiyu-wang-647a7b91/">邓云</a></h4>
