--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title> 刘智Lab - Home</title>
+      <title> 刘智实验室-主页</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="刘智实验室, Home, HUST">
+      <meta name="description" content="刘智实验室, 主页, HUST">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -71,9 +71,8 @@
             <div class="row-fluid marketing">
                <div class="span12">
                   <p style="font-size:18px; line-height=28px">
-                  肠道微生物团队Dr. Zhaohui "Steve" Qin has extensive experience in statistical modeling and computing with applications to statistical genetics and genomics.
-                  His recent research is focused on developing Bayesian model-based methods to analyze data generated from applications of next-generation sequencing technologies such as ChIP-seq, RNA-seq, Hi-C, WGBS, resequencing, and on developing software so that the methods can be easily adopted by the research community.
-                  He is also actively collaborating with biomedical scientists and clinicians on projects that utilize next-generation sequencing technologies to better understand genomics and epigenomics.
+                  课题组长期从事微生物学研究，在微生物信号交流和肠道微生物与宿主互作领域做出了系列标志性成绩，获美国国立卫生研究院R21和R01，中国“杰出青年”基金，“青年千人”，国家973课题、国家重点研发计划、自然科学基金等项目资助。到目前为止主要研究方向：微生物与宿主动物的相互作用
+                  宿主动物肠道环境中具有10倍于宿主细胞数量的微生物，其中包括益生菌、病原菌、条件致病菌等，这些微生物共同作用，参与宿主健康和疾病的调控。课题组感兴趣的科学问题包括：1）微生物培养组学：通过多学科组学交叉技术，建立肠道微生物菌株库和对应噬菌体库；2）肠道微生物应答宿主信号，参与宿主免疫、代谢调节的分子机理；3）微纳肠道微生物机器人研制：利用合成生物学技术和纳米医药技术强化肠道微生物的功能。
                   </p>
                   <br/>
                </div>
@@ -84,7 +83,7 @@
                   <h3>News</h3>
                   <div class="span7">
                      <ul>
-                     <li>[12/31/2019] 实验室网站上线啦The lab website is launched!</li>
+                     <li>实验室网站上线啦</li>
                      </ul>
                   </div>
                   <div class="span4">
