--- a/people.html
+++ b/people.html
@@ -37,7 +37,7 @@
          <div class="row-fluid">
             <div class="span3 bs-docs-sidebar" id="navparent">
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
-                  <li><a href="#principalinvestigator"> Principal Investigator </a></li>
+                  <li><a href="#principalinvestigator"> 导师 </a></li>
                   <li><a href="#phd">PhD Students</a></li>
                   <li><a href="#rotationphd">Rotation PhD Students</a></li>
                   <li><a href="#master">Master Students</a></li>
@@ -47,23 +47,23 @@
             <div class="span8 offset1">
                <section id="principalinvestigator">
                   <div class="page-header">
-                     <h3>Principal Investigator</h3>
+                     <h3>导师</h3>
                   </div>
                   <div class="row-fluid">
                      <div class="span3">
                         <!--<a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">-->
-                        <img src="thumbs/Steve_ID_Photo.jpg" alt="Zhaohui Qin"/>
+                        <img src="thumbs/liuzhi.jpg" alt="刘智"/>
                         </a>
                      </div>
                      <div class="span9">
-                        <h4>Zhaohui "Steve" Qin</h4>
-                        <p>Associate Professor of Biostatistics and Bioinformatics at <a href="http://www.emory.edu/home/index.html">Emory University</a></p>
+                        <h4>刘智</h4>
+                        <p>华中科技大学生命学院博士生导师<a href="http://life.hust.edu.cn/info/1071/4719.htm">HUST</a></p>
                         <ul>
 			<li><a href="https://www.sph.emory.edu/departments/bios/index.html">Department of Biomedical Informatics</a>, <a href="https://sph.emory.edu/index.html">Rollins School of Public Health</a></li>
                         <li><a href="http://www.cs.emory.edu/">Department of Computer Science</a></li>
                         <li><a href="https://winshipcancer.emory.edu/index.html">Winship Cancer Institute</a></li>
 			</ul>
-                        <p>Ph.D. in Statistics, University of Michigan, 2000<br/>M.S. in Statistics, University of Michigan, 1997<br/>B.S. in Probability and Statistics, Peking University, 1994</p>
+                        <p>2005年- 2014年University of Pennsylvania  微生物学访问学者、博士后、研究助理<br/>2014年- 2016年中国农业科学院研究员<br/>2016年-  华中科技大学生命科学与技术学院教授</p>
                         <p><b>Phone: </b>(404) 712-9576 </p>
                         <p><b>Fax: </b>(404) 727-1370 </p>
                         <p><b>Email: </b><a href="mailto:zhaohui.qin@emory.edu">zhaohui.qin@emory.edu</a></p>
