--- a/footer.html
+++ b/footer.html
@@ -2,20 +2,20 @@
     <div class="row-fluid">
        <div class="span5">
 	  <h3>About US</h3>
-	  <p><b>Director: </b>Zhaohui "Steve" Qin</p>
+	  <p><b>负责人: </b>刘智</p>
 	  <p><b>Phone: </b>(404) 712-9576</p>
 	  <p><b>Fax: </b>(404) 727-1370</p>
-	  <a href="mailto:zhaohui.qin@emory.edu">Email</a>
+	  <a href="zhiliu@hust">Email</a>
        </div>
        <div class="span2">
-	  <a href="http://www.emory.edu/home/index.html"><img src = "thumbs/EUShield_vt_rv.png" alt="research-lab-logo"/></a>
+	  <a href="http://www.emory.edu/home/index.html"><img src = "thumbs/HUST.gif" alt="HUST"/></a>
        </div>
        <div class="span5">
-	  <h3>Address</h3>
-	  <p>GCR 338<br>
-             1518 Clifton Road Ne<br>
-	     Atlanta, Georgia 30322<br>
-	     United States 
+	  <h3>地址</h3>hong
+	  <p>中国<br>
+		湖北省武汉市<br>
+	    洪山区珞喻路1037号<br>
+	    华中科技大学
 	  </p>
 	  <a href="https://www.google.com/maps/place/1518+Clifton+Rd,+Druid+Hills,+GA+30329/@33.7974946,-84.3242774,18z/data=!4m8!1m2!2m1!1s1518+Clifton+Road+NE+,++Atlanta+,+GA+30322-4201!3m4!1s0x88f506f79fac5b37:0x657cc5514cde4e27!8m2!3d33.7974756!4d-84.323747">Show Map</a>
        </div>
