--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
+            <p class="lead"> Velit Aliquet Sagittis University </p>
+            <h1>Experimental Research Lab</h1>
          </header>
          <!-- navigation bar -->
          <div class="masthead">
@@ -21,14 +23,14 @@
                <div class="navbar-inner">
                   <div class="container">
                      <ul class="nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="people.html">People</a></li>
-                        <li><a href="research.html">Research</a></li>
-                        <li><a href="publications.html">Publications</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="software.html">Software</a></li>
-                        <li><a href="teaching.html">Teaching</a></li>
-                        <li><a href="contact.html">Join Us</a></li>
+                        <li class="active"><a href="#">主页</a></li>
+                        <li><a href="people.html">成员</a></li>
+                        <li><a href="research.html">研究</a></li>
+                        <li><a href="publications.html">文献</a></li>
+                        <li><a href="gallery.html">风采</a></li>
+                        <li><a href="software.html">常用链接</a></li>
+                        <li><a href="teaching.html">实验室资源</a></li>
+                        <li><a href="contact.html">招聘</a></li>
                      </ul>
                   </div>
                </div>
