--- a/footer.html
+++ b/footer.html
@@ -1,23 +1,23 @@
  <div class="container-fluid">
     <div class="row-fluid">
        <div class="span5">
-	  <h3>About US</h3>
+	  <h3>联系我们</h3>
 	  <p><b>负责人: </b>刘智</p>
-	  <p><b>Phone: </b>(404) 712-9576</p>
-	  <p><b>Fax: </b>(404) 727-1370</p>
-	  <a href="zhiliu@hust">Email</a>
+	  <p><b>电话: </b>027-87001156</p>
+	  <p><b>传真: </b>027-87001156</p>
+	  <a href="zhiliu@hust.edu.cn">电子邮箱</a>
        </div>
        <div class="span2">
-	  <a href="http://www.emory.edu/home/index.html"><img src = "thumbs/HUST.gif" alt="HUST"/></a>
+	  <a href="https://www.hust.edu.cn/"><img src = "thumbs/HUST.gif" alt="HUST"/></a>
        </div>
        <div class="span5">
-	  <h3>地址</h3>hong
+	  <h3>地址</h3>
 	  <p>中国<br>
 		湖北省武汉市<br>
 	    洪山区珞喻路1037号<br>
 	    华中科技大学
 	  </p>
-	  <a href="https://www.google.com/maps/place/1518+Clifton+Rd,+Druid+Hills,+GA+30329/@33.7974946,-84.3242774,18z/data=!4m8!1m2!2m1!1s1518+Clifton+Road+NE+,++Atlanta+,+GA+30322-4201!3m4!1s0x88f506f79fac5b37:0x657cc5514cde4e27!8m2!3d33.7974756!4d-84.323747">Show Map</a>
+	  <a href="https://map.baidu.com/poi/%E5%8D%8E%E4%B8%AD%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6/@12737299.649079286,3549955.367365728,13.4z?uid=8cdfcee512b5793a28d7ab60&ugc_type=3&ugc_ver=1&device_ratio=2&compat=1&querytype=detailConInfo&da_src=shareurl">显示地址</a>
        </div>
     </div>
  </div>
