--- a/header.html
+++ b/header.html
@@ -1,2 +1,2 @@
-<p class="lead"> Emory University </p>
-<h1>Zhaohui "Steve" Qin Bioinfo Lab</h1>
+<p class="lead"> 华中科技大学 </p>
+<h1>刘智实验室——肠道微生物</h1>
