--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <title> 刘智实验室-主页</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="刘智实验室, 主页, HUST">
+      <meta name="description" content="Research Lab, Home, HUST">
       <meta name="author" content="">
       <!-- Le styles -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -14,8 +14,8 @@
    <body>
       <div class="container">
          <header class="jumbotron subhead" id="overview">
-            <p class="lead"> Velit Aliquet Sagittis University </p>
-            <h1>Experimental Research Lab</h1>
+            <p class="lead">  HUST </p>
+            <h1>肠道微生物实验室</h1>
          </header>
          <!-- navigation bar -->
          <div class="masthead">
@@ -26,7 +26,7 @@
                         <li class="active"><a href="#">主页</a></li>
                         <li><a href="people.html">成员</a></li>
                         <li><a href="research.html">研究</a></li>
-                        <li><a href="publications.html">文献</a></li>
+                        <li><a href="publications.html">发表文献</a></li>
                         <li><a href="gallery.html">风采</a></li>
                         <li><a href="software.html">常用链接</a></li>
                         <li><a href="teaching.html">实验室资源</a></li>
@@ -79,7 +79,7 @@
                   <br/>
                </div>
                <div class="row-fluid">
-                   <p><b>Links: <a href="https://scholar.google.com/citations?hl=en&user=9F-Jk74AAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>, <a href="http://orcid.org/0000-0002-1583-146X">ORCID</a>, <a href="https://www.ncbi.nlm.nih.gov/myncbi/zhaohui.qin.1/bibliography/public/">NCBI</a>, <a href="https://publons.com/researcher/2960270/zhaohui-qin/">Publons</a>, <a href="https://www.growkudos.com/profile/zhaohui_qin">Kudos</a>, <a href="https://emorybioinfo.slack.com">Internal Slack Group</a>, <a href="https://github.com/Steve-Qin-Bioinfo-Lab">Github</a></b></p>
+                   <p><b>Links: <a href="http://life.hust.edu.cn/">生命科学与技术学院官网</a>,  <a href="https://pubmed.ncbi.nlm.nih.gov/">PubMed</a>,<a href="https://www.cnki.net/">中国知网</a>，<a href="http://s.ilab.cn/login.jsp">iLab订购平台</a></b></p>
                </div>
                <div class="row-fluid">
                   <h3>News</h3>
