--- a/people.html
+++ b/people.html
@@ -20,7 +20,7 @@
 		<div class="navbar-inner">
 		  <div class="container">
 		     <ul class="nav">
-			<li><a href="index.html"></a></li>
+			<li><a href="index.html">主页</a></li>
 			<li class="active"><a href="#">成员</a></li>
 			<li><a href="research.html">研究</a></li>
 			<li><a href="publications.html">发表文献</a></li>
@@ -65,7 +65,7 @@
                         <p><b>电话: </b>027-87001156 </p>
                         <p><b>传真: </b>027-87001156 </p>
                         <p><b>电子邮箱: </b><a href="mailto:zhiliu@hust.edu.cn">zhiliu@hust.edu.cn</a></p>
-                        <p><b><a href="刘智课题组介绍（04302020）.pdf">实验室简介</a> </b></p>
+                        <p><b><a href="刘智课题组介绍（04302020）.pdf">实验室简介-文件</a> </b></p>
                      </div>
                   </div>
                </section>
@@ -80,7 +80,7 @@
                      </div>
                      <div class="span9">
                          <!--<h4><a href="https://www.linkedin.com/in/yanting-huang-854384116">Yanting Huang</a></h4>-->
-                        <p>实验室大师兄，博士后</p>
+                        <p>胡俊</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -90,7 +90,7 @@
                         <img src="thumbs/2.jpg" alt="马遥"/>
                      </div>
                      <div class="span9">
-                        <p>实验室师姐，博士后</p>
+                        <p>马遥</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -100,7 +100,7 @@
                         <img src="thumbs/2.jpg" alt="张婧"/>
                      </div>
                      <div class="span9">
-                        <p>实验室助理</p>
+                        <p>张婧，实验室助理</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -115,7 +115,7 @@
                         <img src="thumbs/2.jpg" alt="石林"/>
                      </div>
                      <div class="span9">
-                        <p>实验室交流师姐，2016级博士</p>
+                        <p>石林</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -125,7 +125,7 @@
                         <img src="thumbs/1.jpg" alt="陈国忠"/>
                      </div>
                      <div class="span9">
-                        <p>2017级博士</p>
+                        <p>陈国忠</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -135,7 +135,7 @@
                         <img src="thumbs/2.jpg" alt="罗美"/>
                      </div>
                      <div class="span9">
-                        <p>2017级博士</p>
+                        <p>罗美</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -145,7 +145,7 @@
                         <img src="thumbs/2.jpg" alt="李蓓"/>
                      </div>
                      <div class="span9">
-                        <p>实验室师姐，博士</p>
+                        <p>李蓓</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -155,7 +155,7 @@
                         <img src="thumbs/2.jpg" alt="李荣"/>
                      </div>
                      <div class="span9">
-                        <p>实验室师姐，博士</p>
+                        <p>李荣</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -165,7 +165,7 @@
                         <img src="thumbs/2.jpg" alt="杨晓满"/>
                      </div>
                      <div class="span9">
-                        <p>实验室师姐，博士</p>
+                        <p>杨晓满</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -175,7 +175,7 @@
                         <img src="thumbs/1.jpg" alt="陈景超"/>
                      </div>
                      <div class="span9">
-                        <p>实验室师姐，博士</p>
+                        <p>陈景超</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -185,7 +185,7 @@
                         <img src="thumbs/2.jpg" alt="罗亚楠"/>
                      </div>
                      <div class="span9">
-                        <p>博士</p>
+                        <p>罗亚楠</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -195,7 +195,7 @@
                         <img src="thumbs/1.jpg" alt="郭丁铭"/>
                      </div>
                      <div class="span9">
-                        <p>博士</p>
+                        <p>郭丁铭</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -205,7 +205,7 @@
                         <img src="thumbs/1.jpg" alt="王向峰"/>
                      </div>
                      <div class="span9">
-                        <p>博士</p>
+                        <p>王向峰</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -220,7 +220,7 @@
                         <img src="thumbs/2.jpg" alt="钱明杰"/>
                      </div>
                      <div class="span9">
-                        <p>硕士</p>
+                        <p>钱明杰</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -230,7 +230,7 @@
                         <img src="thumbs/1.jpg" alt="章志远"/>
                      </div>
                      <div class="span9">
-                        <p>硕士</p>
+                        <p>章志远</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -240,7 +240,7 @@
                         <img src="thumbs/2.jpg" alt="石长萍"/>
                      </div>
                      <div class="span9">
-                        <p>硕士</p>
+                        <p>石长萍</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -250,7 +250,7 @@
                         <img src="thumbs/1.jpg" alt="秦子鑫"/>
                      </div>
                      <div class="span9">
-                        <p>硕士</p>
+                        <p>秦子鑫</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -260,7 +260,7 @@
                         <img src="thumbs/2.jpg" alt="邓云"/>
                      </div>
                      <div class="span9">
-                        <p>硕士</p>
+                        <p>沐云</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -270,7 +270,7 @@
                         <img src="thumbs/2.jpg" alt="严瑾"/>
                      </div>
                      <div class="span9">
-                        <p>硕士</p>
+                        <p>严瑾</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -280,7 +280,7 @@
                         <img src="thumbs/2.jpg" alt="朴彩佑"/>
                      </div>
                      <div class="span9">
-                        <p>硕士</p>
+                        <p>朴彩佑</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -290,7 +290,7 @@
                         <img src="thumbs/2.jpg" alt="易立文"/>
                      </div>
                      <div class="span9">
-                        <p>硕士</p>
+                        <p>易立文</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -300,7 +300,7 @@
                         <img src="thumbs/2.jpg" alt="易春蓉"/>
                      </div>
                      <div class="span9">
-                        <p>硕士</p>
+                        <p>易春蓉</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -310,7 +310,7 @@
                         <img src="thumbs/2.jpg" alt="王雨阳"/>
                      </div>
                      <div class="span9">
-                        <p>硕士</p>
+                        <p>王雨阳</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -320,7 +320,7 @@
                         <img src="thumbs/2.jpg" alt="胡万凭"/>
                      </div>
                      <div class="span9">
-                        <p>硕士</p>
+                        <p>胡万凭</p>
                         <p><b>邮箱: </b><a href="mailto:">@hust.edu.cn</a></p>
                      </div>
                   </div>
@@ -331,14 +331,14 @@
                     <h3>已毕业学生</h3>
 
                     <h4>Postdoc</h4>
-                    <p>XX</p>
+                    <p>XXX</p>
 
                     <h4>PhD Students</h4>
-                    <p>Jihao Zhou</p>
-                    <p>Hyung Won Choi</p>
+                    <p>XXX</p>
+                    <p>XXX</p>
 
-                    <h4>Visiting Students</h4>
-                    <p>Guodong Yang</p>
+                    <h4>master Students</h4>
+                    <p>XXX</p>
                 </div>
                </section>
 
