--- a/research.html
+++ b/research.html
@@ -49,6 +49,8 @@
                   <li><a class="subhead" href="#FacilisisMagna"> Facilisis Magna </a></li>
                   -->
                   <li><a href="#Bioinfo"> Bioinformatics </a></li>
+                  <li><a class="subhead" href="#Penatibus"> Penatibus </a></li>
+                  <li><a class="subhead" href="#QuamIdLeo"> Quam Id Leo  </a></li>
                   <li><a href="#StatModel"> Statistical Modeling </a></li>
                   <li><a href="#Epigen"> Epigenetics </a></li>
                   <li><a href="#Gene"> Genetics </a></li>
