--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
 	  <p><b>负责人: </b>刘智</p>
 	  <p><b>电话: </b>027-87001156</p>
 	  <p><b>传真: </b>027-87001156</p>
-	  <a href="mailto:zhiliu@hust.edu.cn">电子邮箱：zhiliu@hust.edu.cn</a>
+	  <p><b>电子邮箱: </b><a href="mailto:zhiliu@hust.edu.cn">zhiliu@hust.edu.cn</a></p>
        </div>
        <div class="span2">
 	  <a href="https://www.hust.edu.cn/"><img src = "thumbs/HUST.gif" alt="HUST"/></a>
